crates/test-ui/ui/not_writeback.stderr
error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: &mut Id<NSObject> = unsafe { msg_send![obj, a] };
  |                                         ^^^^^^^^^^^^^^^^^ the trait `RefEncode` is not implemented for `Id<NSObject>`
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `&mut Id<NSObject>` to implement `Encode`
  = note: required for `&mut Id<NSObject>` to implement `EncodeReturn`
  = note: required for `&mut Id<NSObject>` to implement `ConvertReturn`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/runtime/message.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
...
  |         R: ConvertReturn,
  |            ^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject>: Encode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `Encode` is not implemented for `Id<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Id<NSObject>` to implement `EncodeArgument`
  = note: required for `Id<NSObject>` to implement `ConvertArgument`
  = note: required for `(Id<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/runtime/message.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
  |     where
  |         A: ConvertArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: &param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `&Id<NSObject>` to implement `Encode`
  = note: required for `&Id<NSObject>` to implement `EncodeArgument`
  = note: required for `&Id<NSObject>` to implement `ConvertArgument`
  = note: required for `(&Id<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/runtime/message.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
  |     where
  |         A: ConvertArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: Some(&param)] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `&Id<NSObject>` to implement `Encode`
  = note: 1 redundant requirement hidden
  = note: required for `Option<&Id<NSObject>>` to implement `Encode`
  = note: required for `Option<&Id<NSObject>>` to implement `EncodeArgument`
  = note: required for `Option<&Id<NSObject>>` to implement `ConvertArgument`
  = note: required for `(Option<&Id<NSObject>>,)` to implement `ConvertArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/runtime/message.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
  |     where
  |         A: ConvertArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `*mut Id<NSObject>` to implement `Encode`
  = note: required for `*mut Id<NSObject>` to implement `EncodeArgument`
  = note: required for `*mut Id<NSObject>` to implement `ConvertArgument`
  = note: required for `(*mut Id<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/runtime/message.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
  |     where
  |         A: ConvertArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `&mut Id<NSObject>` to implement `RefEncode`
  = note: required for `&mut &mut Id<NSObject>` to implement `Encode`
  = note: required for `&mut &mut Id<NSObject>` to implement `EncodeArgument`
  = note: required for `&mut &mut Id<NSObject>` to implement `ConvertArgument`
  = note: required for `(&mut &mut Id<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/runtime/message.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
  |     where
  |         A: ConvertArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
